<resources>

    <string name="app_name"> ESSA CAR </string>
    <string name="header_title"> ESSA CAR </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="credit_card">Cridet Card</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_slide">Memey Car</string>


    <string name="mail">Email</string>
    <string name="hidmail">Enter your email</string>
    <string name="password">Password</string>
    <string name="hidpass">Enter your password</string>
    <string name="logbutoon">LOGIN</string>
    <string name="splashtxt"> Welcom To THE APPLICATION MEMY CAR </string>
    <string name="splashtxt2">THE LATEST PLATFORM IN SECURED CARS</string>
    <string name="splashtxt3"> CHOOSE AND LEAVE THE Rest to us</string>
    <string name="ermail">البريد الالكترونى </string>
    <string name="erpass">كلمة المرور </string>
    <string name="erhidmail">من فضلك أدخل الايميل</string>
    <string name="erhidpass">من فضلك أدخل الباسوورد</string>
    <string name="twloginbutton">دخول</string>
    <string name="bastxt"> MEMY CAR MORE GUARANTEE MORE TRUST </string>
    <string name="splashtwoar">  أهلا بك في تطبيق ميمي كار  .... أكبر منصة للسيارات المضمونة   اختار ....... وخلى الباقى علينا </string>
    <string name="Name">Name </string>
    <string name="hintname">Enter your Name </string>
    <string name="en_sucesstxt"> Already Have An Account ! signin</string>
    <string name="cartxtmark"> BMW M4 COUPE , 19LM , Automatic , Navigation , Head up display ,Seat heating .... </string>
    <string name="arname"> الاسم</string>
    <string name="arnamehint">من فضلك ادخل الاسم  </string>
    <string name="arabicmenu">Arabic</string>
    <string name="english_menu">English</string>
    <string name="title_activity">Memy CAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Profile_fragment"> Profile fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="car_type">Car Type</string>
    <string name="pay_type">Pay Type</string>
    <string name="add_advertisement">Add Advertisement</string>
    <string name="send_message">ارسال رساله</string>
    <string name="car_type_ar">نوع السياره</string>
    <string name="car_status"> Car Status </string>
    <string name="car_photo">Car Photo</string>
    <string name="category_type">Category</string>
    <string name="car_model">Car Model</string>
    <string name="car_model_hint"> Car Model</string>
    <string name="car_status_hint"> Check Status </string>
    <string name="car_city">City</string>
    <string name="cars">CARS</string>
    <string name="check_status">Check Status</string>
    <string name="check_photos">Check Photo</string>
    <string name="car_price">Car Price</string>
    <string name="check_date">Check Date</string>
    <string name="car_status_ar">حاله السياره</string>
    <string name="car_lime">نوع الجير</string>
    <string name="car_models">الموديل</string>
    <string name="check_statuss">حاله الفحص</string>
    <string name="images_check">صور الفحص</string>
    <string name="show_images">عرض الصور</string>
    <string name="payment_method">طريقه الدفع</string>
    <string name="walk_in_km">الممشي</string>
    <string name="price">السعر</string>
    <string name="date_of_examination">تاريخ الفحص</string>
    <string name="city">المديته</string>
    <string name="add_images">اضافة الصور</string>
    <string name="add">اضافه</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contact_me">Contact me</string>
    <string name="asked">ASKED</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="message">Message</string>
    <string name="advertisement">Advertisement</string>
    <string name="profile">Profile</string>
    <string name="app_Name">MY CARS</string>
    <string name="car_brand">Car Brand</string>
    <string name="add_check_photo">Add Check Photo</string>
    <string name="check_photo">Check Photo</string>
    <string-array name="CarModel" >
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>

    <string-array name="lstCity">
        <item>Alexandria</item><item>Cairo</item><item>Tanta</item><item>Faiyum</item>
        <item>Damietta</item><item>Giza</item><item>Ismailia</item><item>Kafr El Sheikh</item>
        <item>Luxor</item><item>Matruh</item><item>Minya</item><item>Monufia</item>
        <item>New Valley</item><item>North Sinai</item><item>Port Said</item><item>Qena</item>
        <item>Suez</item><item>Mansoura</item><item>Kafr El Dawar</item><item>Sheikh Zaid</item>
    </string-array>


</resources>
