<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile"
            />

        <item
            android:id="@+id/nav_Advertisement"
            android:icon="@drawable/cellphone_android"
            android:title="@string/advertisement" />


        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/message" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_local_phone_black_24dp"
            android:title="@string/contact_me" />

        <item
            android:id="@+id/nav_asked"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/asked" />
    </group>
</menu>
