<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.AddCarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="22dp"
            tools:ignore="ScrollViewSize,UnusedAttribute">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/magnifika"
                android:text="Add Advertisement"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <!-- TableRow Car Brand -->
            <include layout="@layout/carbrand_expansion_layout"/>

            <!-- TableRow Car Type -->
            <include layout="@layout/cartype_expansion_layout"/>

            <!-- TableRow Car Status -->
            <include layout="@layout/carstatus_expansion_layout"/>


            <!-- TableRow Category -->
            <include layout="@layout/categorytype_expansion_layout"/>


            <!-- TableRow Car Model -->
            <include layout="@layout/carmodel_expansion_layout"/>

            <!-- TableRow Check Status -->
            <include layout="@layout/check_status_expansion_layout"/>
            <!-- TableRow Check Photo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="10"
                tools:ignore="UselessLeaf">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/car_photo"
                        android:layout_marginStart="15dp"
                        android:layout_gravity="center"
                        android:textColor="#3E3E3E"
                        android:fontFamily="@font/magnifika"
                        tools:ignore="HardcodedText,ObsoleteLayoutParam,RelativeOverlap,RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btn_check_Photo"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_margin="5dp"
                            android:background="@drawable/border_button"
                            android:fontFamily="@font/magnifika"
                            android:text="@string/check_photo"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="17sp"
                            tools:ignore="UnusedAttribute" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <!-- TableRow City -->
            <include layout="@layout/carcity_expansion_layout"/>

            <!-- TableRow Pay Type -->
            <include layout="@layout/pay_type_expansion_layout"/>

            <!-- TableRow Check Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="10"
                tools:ignore="UselessLeaf">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/check_date"
                        android:layout_marginStart="15dp"
                        android:layout_gravity="center"
                        android:textColor="#3E3E3E"
                        android:fontFamily="@font/magnifika"
                        tools:ignore="HardcodedText,ObsoleteLayoutParam,RelativeOverlap,RtlHardcoded" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:orientation="vertical">

                       <EditText
                           android:id="@+id/edit_check_date"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:hint="enter check Date"
                           android:clickable="true"
                           tools:ignore="Autofill,HardcodedText,KeyboardInaccessibleWidget,LabelFor,TextFields">
                       </EditText>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>



            <!---  button   -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="25dp"
                tools:ignore="UnusedAttribute,UselessLeaf">

                <Button
                    android:id="@+id/btn_AddCar"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/border_button"
                    android:fontFamily="@font/magnifika"
                    android:text="@string/add_advertisement"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>